feat: profile endpoint
